Fix some possible bugs

--- a/ApacheOpenOfficeDownloader/Properties/launchSettings.json
+++ b/ApacheOpenOfficeDownloader/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "ApacheOpenOfficeDownloader": {
       "commandName": "Project",
-      "commandLineArgs": "-forse-version:4.1.11 -forse-folger:C:\\Users\\DanPC\\Downloads -forse-filename:Office.exe -forse-language:ru"
+      "commandLineArgs": "-forse-version:4.1.11 -forse-folger:C:\\Users\\DanPC\\Downloads  -forse-language:en-gb"
     }
   }
 }
